# CLT_Bridge

./: CITATION.cff  README.md  main.py  pyproject.toml  stup.cfg
code/: __init__.py
code/core/: beam.py
code/materials/: __init__.py  base.py  composite.py  isotropic.py  load.py  panel.py  sandwich.py
code/utils/: visualization.py
